CUDA working for some cases

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -12,7 +12,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
       "All tests passed.\n"
      ]
     },
@@ -33,6 +32,7 @@
     "import pack_test\n",
     "import importlib\n",
     "importlib.reload(pack_test)\n",
+    "importlib.reload(pack_test.pack_cost)\n",
     "pack_test.run_all_tests()"
    ]
   },
