--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -31,8 +31,10 @@
     "sys.path.append('/mnt/d/packing/code/core/')\n",
     "import pack_test\n",
     "import importlib\n",
+    "\n",
     "importlib.reload(pack_test)\n",
     "importlib.reload(pack_test.pack_cost)\n",
+    "importlib.reload(pack_test.pack_cost.pack_cuda)\n",
     "pack_test.run_all_tests()"
    ]
   },
