Make CUDA coda a bit more general

--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -2,142 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "4106fdd4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2.0, 11.0)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import cupy as cp\n",
-    "\n",
-    "def increment_by_one(a):\n",
-    "    a += 1\n",
-    "    return a\n",
-    "\n",
-    "def increment_by_many(a,N):\n",
-    "    for _ in range(N):\n",
-    "        a = increment_by_one(a)\n",
-    "    return a\n",
-    "\n",
-    "base = cp.float64(1.)\n",
-    "increment_by_one(base), increment_by_many(base, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f3a446cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "297b5713",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "one: 2.0\n",
-      "many: 11.0\n"
+      "local\n",
+      "Streams\tKernels/sec\tElapsed(s)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
+    "\n",
+    "# tools/kernel_concurrency_test.py\n",
+    "# Usage: python3 tools/kernel_concurrency_test.py\n",
+    "# Make sure you run this in the Python environment that has CuPy and your repo available.\n",
+    "\n",
+    "import time\n",
+    "import math\n",
+    "import numpy as np\n",
     "import cupy as cp\n",
+    "import sys\n",
+    "sys.path.append('/mnt/d/packing/code/core/')\n",
+    "import pack_cuda\n",
     "\n",
-    "cuda_src = r\"\"\"\n",
-    "extern \"C\" {\n",
+    "def make_input(N):\n",
+    "    # small random poses in sensible range\n",
+    "    rng = np.random.RandomState(123)\n",
+    "    x = rng.uniform(-5.0, 5.0, size=N)\n",
+    "    y = rng.uniform(-5.0, 5.0, size=N)\n",
+    "    t = rng.uniform(-math.pi, math.pi, size=N)\n",
+    "    xyt = np.stack([x, y, t], axis=1).astype(np.float64)\n",
+    "    return xyt\n",
     "\n",
-    "__device__ __forceinline__\n",
-    "double increment_by_one_core(double a) {\n",
-    "    return a + 1.0;\n",
-    "}\n",
+    "def run_trial(num_streams, iters_per_stream, xyt_np):\n",
+    "    pack_cuda._ensure_initialized()  # make sure module is initialized\n",
+    "    n = xyt_np.shape[0]\n",
+    "    # Flatten 3xN row-major as kernel expects\n",
+    "    xyt_3xN = cp.ascontiguousarray(cp.asarray(xyt_np).T).ravel()\n",
     "\n",
-    "__device__ __forceinline__\n",
-    "double increment_by_many_core(double a, int N) {\n",
-    "    for (int i = 0; i < N; ++i) {\n",
-    "        a = increment_by_one_core(a);\n",
-    "    }\n",
-    "    return a;\n",
-    "}\n",
+    "    # Grab raw kernel and device arrays from pack_cuda (uses private names)\n",
+    "    kernel = pack_cuda._overlap_list_total_kernel\n",
+    "    piece_xy = pack_cuda._piece_xy_d\n",
+    "    piece_nverts = pack_cuda._piece_nverts_d\n",
+    "    num_pieces = np.int32(pack_cuda._num_pieces)\n",
     "\n",
-    "__global__ void increment_by_one_kernel(double* a) {\n",
-    "    a[0] = increment_by_one_core(a[0]);\n",
-    "}\n",
+    "    # Precreate per-stream outputs\n",
+    "    streams = [cp.cuda.Stream(non_blocking=True) for _ in range(num_streams)]\n",
+    "    out_totals = [cp.zeros(1, dtype=cp.float64) for _ in range(num_streams)]\n",
     "\n",
-    "__global__ void increment_by_many_kernel(double* a, int N) {\n",
-    "    a[0] = increment_by_many_core(a[0], N);\n",
-    "}\n",
+    "    # Warmup single call per stream to get JIT/compilation out of the way\n",
+    "    for s_idx, stream in enumerate(streams):\n",
+    "        with stream:\n",
+    "            kernel(\n",
+    "                (1,), (n,),\n",
+    "                (xyt_3xN, np.int32(n), piece_xy, piece_nverts, num_pieces, out_totals[s_idx], cp.zeros(1)),\n",
+    "                stream=stream\n",
+    "            )\n",
+    "    # Ensure warmup finished\n",
+    "    for s in streams:\n",
+    "        s.synchronize()\n",
     "\n",
-    "} // extern \"C\"\n",
-    "\"\"\"\n",
+    "    # Timed run: launch iters_per_stream kernels on each stream (back-to-back)\n",
+    "    start = time.time()\n",
+    "    for k in range(iters_per_stream):\n",
+    "        for s_idx, stream in enumerate(streams):\n",
+    "            with stream:\n",
+    "                kernel(\n",
+    "                    (1,), (n,),\n",
+    "                    (xyt_3xN, np.int32(n), piece_xy, piece_nverts, num_pieces, out_totals[s_idx], cp.zeros(1)),\n",
+    "                    stream=stream\n",
+    "                )\n",
+    "    # Wait for all streams to finish\n",
+    "    for s in streams:\n",
+    "        s.synchronize()\n",
+    "    end = time.time()\n",
     "\n",
-    "# Compile once\n",
-    "module = cp.RawModule(\n",
-    "    code=cuda_src,\n",
-    "    options=('-std=c++11',),\n",
-    "    name_expressions=[\n",
-    "        'increment_by_one_kernel',\n",
-    "        'increment_by_many_kernel',\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "increment_by_one_kernel = module.get_function('increment_by_one_kernel')\n",
-    "increment_by_many_kernel = module.get_function('increment_by_many_kernel')\n",
-    "\n",
-    "\n",
-    "# ---- Python helper wrappers ----\n",
-    "\n",
-    "def increment_by_one_gpu(x):\n",
-    "    a = cp.asarray(x, dtype=cp.float64)\n",
-    "    increment_by_one_kernel((1,), (1,), (a,))\n",
-    "    return a\n",
-    "\n",
-    "def increment_by_many_gpu(x, N):\n",
-    "    a = cp.asarray(x, dtype=cp.float64)\n",
-    "    increment_by_many_kernel((1,), (1,), (a, cp.int32(N)))\n",
-    "    return a\n",
+    "    elapsed = end - start\n",
+    "    total_kernels = num_streams * iters_per_stream\n",
+    "    kernels_per_sec = total_kernels / elapsed\n",
+    "    return kernels_per_sec, elapsed\n",
     "\n",
     "\n",
-    "# Test\n",
-    "if __name__ == \"__main__\":\n",
-    "    base = cp.float64(1.0)\n",
+    "# Parameters to tune\n",
+    "N = 150                       # number of trees (threads per block)\n",
+    "iters = 20                    # iterations per stream\n",
+    "xyt = make_input(N)\n",
     "\n",
-    "    print(\"one:\",   increment_by_one_gpu(base).item())      # 2.0\n",
-    "    print(\"many:\",  increment_by_many_gpu(base, 10).item()) # 11.0"
+    "packs = [1, 2, 4, 8, 16, 32]  # number of concurrent streams to test\n",
+    "print(\"Streams\\tKernels/sec\\tElapsed(s)\")\n",
+    "for s in packs:\n",
+    "    kps, t = run_trial(s, iters, xyt)\n",
+    "    print(f\"{s}\\t{int(kps)}\\t\\t{t:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4beb2fff",
+   "id": "d20dbed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45d6d65",
    "metadata": {},
    "outputs": [],
    "source": []
