--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
+      "hi\n",
       "Streams\tKernels/sec\tElapsed(s)\n",
-      "1\t18\t\t1.103\n",
-      "1\t18\t\t1.103\n",
-      "1\t18\t\t1.098\n",
-      "1\t18\t\t1.098\n",
-      "2\t36\t\t1.103\n",
-      "2\t36\t\t1.103\n",
-      "4\t72\t\t1.103\n",
-      "4\t72\t\t1.103\n",
-      "8\t144\t\t1.104\n",
-      "8\t144\t\t1.104\n",
-      "16\t144\t\t2.217\n",
-      "16\t144\t\t2.217\n",
-      "32\t145\t\t4.390\n",
-      "32\t145\t\t4.390\n"
+      "hi\n",
+      "Streams\tKernels/sec\tElapsed(s)\n",
+      "1\t18\t\t1.095\n",
+      "1\t18\t\t1.095\n",
+      "2\t56\t\t0.704\n",
+      "2\t56\t\t0.704\n",
+      "4\t71\t\t1.121\n",
+      "4\t71\t\t1.121\n",
+      "8\t105\t\t1.516\n",
+      "8\t105\t\t1.516\n",
+      "16\t146\t\t2.188\n",
+      "16\t146\t\t2.188\n",
+      "32\t106\t\t6.037\n",
+      "32\t106\t\t6.037\n"
      ]
     }
    ],
@@ -107,7 +109,8 @@
     "iters = 20                    # iterations per stream\n",
     "xyt = make_input(N)\n",
     "\n",
-    "packs = [1, 2, 4, 8, 16, 32]  # number of concurrent streams to test\n",
+    "pack_cuda._ensure_initialized()\n",
+    "packs = [1,2, 4, 8, 16, 32]  # number of concurrent streams to test\n",
     "print(\"Streams\\tKernels/sec\\tElapsed(s)\")\n",
     "for s in packs:\n",
     "    kps, t = run_trial(s, iters, xyt[:200], xyt[:200])\n",
