--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
-      "hi\n",
       "Streams\tKernels/sec\tElapsed(s)\n",
-      "hi\n",
-      "Streams\tKernels/sec\tElapsed(s)\n",
-      "1\t18\t\t1.095\n",
-      "1\t18\t\t1.095\n",
-      "2\t56\t\t0.704\n",
-      "2\t56\t\t0.704\n",
-      "4\t71\t\t1.121\n",
-      "4\t71\t\t1.121\n",
-      "8\t105\t\t1.516\n",
-      "8\t105\t\t1.516\n",
-      "16\t146\t\t2.188\n",
-      "16\t146\t\t2.188\n",
-      "32\t106\t\t6.037\n",
-      "32\t106\t\t6.037\n"
+      "1\t45\t\t0.218\n",
+      "2\t99\t\t0.200\n",
+      "4\t200\t\t0.200\n",
+      "8\t400\t\t0.200\n",
+      "16\t401\t\t0.399\n",
+      "32\t401\t\t0.797\n",
+      "64\t399\t\t1.600\n"
      ]
     }
    ],
@@ -60,6 +51,8 @@
     "    # Flatten 3xN row-major as kernel expects\n",
     "    xyt1_3xN = cp.ascontiguousarray(cp.asarray(xyt1_np).T).ravel()\n",
     "    xyt2_3xN = cp.ascontiguousarray(cp.asarray(xyt2_np).T).ravel()\n",
+    "    # dynamic shared memory size (no shared memory used for large n2)\n",
+    "    shared_mem = 0\n",
     "\n",
     "    # Grab raw kernel and device arrays from pack_cuda (uses private names)\n",
     "    kernel = pack_cuda._overlap_list_total_kernel\n",
@@ -67,17 +60,19 @@
     "    piece_nverts = pack_cuda._piece_nverts_d\n",
     "    num_pieces = np.int32(pack_cuda._num_pieces)\n",
     "\n",
-    "    # Precreate per-stream outputs\n",
+    "    # Precreate per-stream outputs (with gradient arrays)\n",
     "    streams = [cp.cuda.Stream(non_blocking=True) for _ in range(num_streams)]\n",
     "    out_totals = [cp.zeros(1, dtype=cp.float64) for _ in range(num_streams)]\n",
+    "    out_grads = [cp.zeros(n1 * 3, dtype=cp.float64) for _ in range(num_streams)]\n",
     "\n",
     "    # Warmup single call per stream to get JIT/compilation out of the way\n",
     "    for s_idx, stream in enumerate(streams):\n",
     "        with stream:\n",
     "            kernel(\n",
     "                (1,), (n1,),\n",
-    "                (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), piece_xy, piece_nverts, num_pieces, out_totals[s_idx], cp.zeros(1)),\n",
-    "                stream=stream\n",
+    "                (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), out_totals[s_idx], out_grads[s_idx]),\n",
+    "                stream=stream,\n",
+    "                shared_mem=shared_mem\n",
     "            )\n",
     "    # Ensure warmup finished\n",
     "    for s in streams:\n",
@@ -90,8 +85,9 @@
     "            with stream:\n",
     "                kernel(\n",
     "                    (1,), (n1,),\n",
-    "                    (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), piece_xy, piece_nverts, num_pieces, out_totals[s_idx], cp.zeros(1)),\n",
-    "                    stream=stream\n",
+    "                    (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), out_totals[s_idx], out_grads[s_idx]),\n",
+    "                    stream=stream,\n",
+    "                    shared_mem=shared_mem\n",
     "                )\n",
     "    # Wait for all streams to finish\n",
     "    for s in streams:\n",
@@ -105,12 +101,12 @@
     "\n",
     "\n",
     "# Parameters to tune\n",
-    "N = 1024                       # number of trees (threads per block)\n",
-    "iters = 20                    # iterations per stream\n",
+    "N = 200                       # number of trees (threads per block)\n",
+    "iters = 10                    # iterations per stream\n",
     "xyt = make_input(N)\n",
     "\n",
     "pack_cuda._ensure_initialized()\n",
-    "packs = [1,2, 4, 8, 16, 32]  # number of concurrent streams to test\n",
+    "packs = [1,2, 4, 8, 16, 32, 64]  # number of concurrent streams to test\n",
     "print(\"Streams\\tKernels/sec\\tElapsed(s)\")\n",
     "for s in packs:\n",
     "    kps, t = run_trial(s, iters, xyt[:200], xyt[:200])\n",
