--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
+      "hi\n",
+      "False\n",
       "Streams\tKernels/sec\tElapsed(s)\n",
-      "1\t45\t\t0.218\n",
-      "2\t99\t\t0.200\n",
-      "4\t200\t\t0.200\n",
-      "8\t400\t\t0.200\n",
-      "16\t401\t\t0.399\n",
-      "32\t401\t\t0.797\n",
-      "64\t399\t\t1.600\n"
+      "1\t46\t\t0.213\n",
+      "2\t99\t\t0.201\n",
+      "4\t198\t\t0.201\n",
+      "8\t397\t\t0.201\n",
+      "16\t397\t\t0.402\n",
+      "32\t399\t\t0.801\n",
+      "64\t398\t\t1.608\n"
      ]
     }
    ],
@@ -34,6 +37,7 @@
     "import sys\n",
     "sys.path.append('/mnt/d/packing/code/core/')\n",
     "import pack_cuda\n",
+    "pack_cuda.USE_FLOAT32 = True\n",
     "\n",
     "def make_input(N):\n",
     "    # small random poses in sensible range\n",
