--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -12,6 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
+      "hi\n",
       "All tests passed.\n"
      ]
     },
@@ -45,20 +47,26 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.7040063920164361"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'NVIDIA GeForce RTX 4070 Ti' 8 9\n"
+     ]
     }
    ],
    "source": [
-    "import kaggle_support as kgs\n",
-    "kgs.tree_max_radius"
+    "import cupy as cp\n",
+    "prop = cp.cuda.runtime.getDeviceProperties(0)\n",
+    "print(prop['name'], prop['major'], prop['minor'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "599dea53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
