--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -2,7 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "9eb4ff94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== FRESH START ===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clear all outputs and restart\n",
+    "from IPython.display import clear_output\n",
+    "clear_output(wait=True)\n",
+    "print(\"=== FRESH START ===\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -10,32 +31,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
-      "hi\n",
-      "False\n",
-      "Streams\tKernels/sec\tElapsed(s)\n",
-      "1\t46\t\t0.213\n",
-      "2\t99\t\t0.201\n",
-      "4\t198\t\t0.201\n",
-      "8\t397\t\t0.201\n",
-      "16\t397\t\t0.402\n",
-      "32\t399\t\t0.801\n",
-      "64\t398\t\t1.608\n"
+      "Blocks\tCalls/sec\tElapsed(s)\n",
+      "1\t312\t\t0.032\n",
+      "2\t351\t\t0.028\n",
+      "4\t251\t\t0.040\n",
+      "8\t294\t\t0.034\n",
+      "16\t277\t\t0.036\n",
+      "32\t235\t\t0.043\n",
+      "64\t383\t\t0.026\n",
+      "128\t202\t\t0.049\n",
+      "32\t235\t\t0.043\n",
+      "64\t383\t\t0.026\n",
+      "128\t202\t\t0.049\n",
+      "256\t70\t\t0.142\n",
+      "256\t70\t\t0.142\n",
+      "512\t28\t\t0.352\n",
+      "512\t28\t\t0.352\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# tools/kernel_concurrency_test.py\n",
-    "# Usage: python3 tools/kernel_concurrency_test.py\n",
-    "# Make sure you run this in the Python environment that has CuPy and your repo available.\n",
+    "# Multi-block kernel concurrency test\n",
+    "# Tests the new multi_ensemble_kernel which launches one block per ensemble\n",
     "\n",
     "import time\n",
     "import math\n",
     "import numpy as np\n",
     "import cupy as cp\n",
     "import sys\n",
-    "sys.path.append('/mnt/d/packing/code/core/')\n",
+    "\n",
+    "# Clear and set path\n",
+    "if '/mnt/d/packing/code/core/' in sys.path:\n",
+    "    sys.path.remove('/mnt/d/packing/code/core/')\n",
+    "sys.path.insert(0, '/mnt/d/packing/code/core/')\n",
+    "\n",
     "import pack_cuda\n",
     "pack_cuda.USE_FLOAT32 = True\n",
     "\n",
@@ -48,73 +77,51 @@
     "    xyt = np.stack([x, y, t], axis=1).astype(np.float64)\n",
     "    return xyt\n",
     "\n",
-    "def run_trial(num_streams, iters_per_stream, xyt1_np, xyt2_np):\n",
-    "    pack_cuda._ensure_initialized()  # make sure module is initialized\n",
-    "    n1 = xyt1_np.shape[0]\n",
-    "    n2 = xyt2_np.shape[0]\n",
-    "    # Flatten 3xN row-major as kernel expects\n",
-    "    xyt1_3xN = cp.ascontiguousarray(cp.asarray(xyt1_np).T).ravel()\n",
-    "    xyt2_3xN = cp.ascontiguousarray(cp.asarray(xyt2_np).T).ravel()\n",
-    "    # dynamic shared memory size (no shared memory used for large n2)\n",
-    "    shared_mem = 0\n",
-    "\n",
-    "    # Grab raw kernel and device arrays from pack_cuda (uses private names)\n",
-    "    kernel = pack_cuda._overlap_list_total_kernel\n",
-    "    piece_xy = pack_cuda._piece_xy_d\n",
-    "    piece_nverts = pack_cuda._piece_nverts_d\n",
-    "    num_pieces = np.int32(pack_cuda._num_pieces)\n",
-    "\n",
-    "    # Precreate per-stream outputs (with gradient arrays)\n",
-    "    streams = [cp.cuda.Stream(non_blocking=True) for _ in range(num_streams)]\n",
-    "    out_totals = [cp.zeros(1, dtype=cp.float64) for _ in range(num_streams)]\n",
-    "    out_grads = [cp.zeros(n1 * 3, dtype=cp.float64) for _ in range(num_streams)]\n",
-    "\n",
-    "    # Warmup single call per stream to get JIT/compilation out of the way\n",
-    "    for s_idx, stream in enumerate(streams):\n",
-    "        with stream:\n",
-    "            kernel(\n",
-    "                (1,), (n1,),\n",
-    "                (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), out_totals[s_idx], out_grads[s_idx]),\n",
-    "                stream=stream,\n",
-    "                shared_mem=shared_mem\n",
-    "            )\n",
-    "    # Ensure warmup finished\n",
-    "    for s in streams:\n",
-    "        s.synchronize()\n",
-    "\n",
-    "    # Timed run: launch iters_per_stream kernels on each stream (back-to-back)\n",
-    "    start = time.time()\n",
-    "    for k in range(iters_per_stream):\n",
-    "        for s_idx, stream in enumerate(streams):\n",
-    "            with stream:\n",
-    "                kernel(\n",
-    "                    (1,), (n1,),\n",
-    "                    (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), out_totals[s_idx], out_grads[s_idx]),\n",
-    "                    stream=stream,\n",
-    "                    shared_mem=shared_mem\n",
-    "                )\n",
-    "    # Wait for all streams to finish\n",
-    "    for s in streams:\n",
-    "        s.synchronize()\n",
-    "    end = time.time()\n",
-    "\n",
+    "def run_trial(num_blocks, iters_per_call, xyt1_np, xyt2_np):\n",
+    "    pack_cuda._ensure_initialized()\n",
+    "    \n",
+    "    # Convert to GPU once to avoid repeated pinned memory allocations\n",
+    "    xyt1_gpu = cp.asarray(xyt1_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
+    "    xyt2_gpu = cp.asarray(xyt2_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
+    "    \n",
+    "    # Create list of ensembles (all identical for this test)\n",
+    "    xyt1_list = [xyt1_gpu for _ in range(num_blocks)]\n",
+    "    xyt2_list = [xyt2_gpu for _ in range(num_blocks)]\n",
+    "    \n",
+    "    # Warmup with full synchronization\n",
+    "    totals, grads = pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    \n",
+    "    # Timed run with proper synchronization\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    start = time.perf_counter()\n",
+    "    for k in range(iters_per_call):\n",
+    "        totals, grads = pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    end = time.perf_counter()\n",
+    "    \n",
     "    elapsed = end - start\n",
-    "    total_kernels = num_streams * iters_per_stream\n",
-    "    kernels_per_sec = total_kernels / elapsed\n",
-    "    return kernels_per_sec, elapsed\n",
+    "    total_calls = iters_per_call\n",
+    "    calls_per_sec = total_calls / elapsed\n",
+    "    return calls_per_sec, elapsed\n",
     "\n",
+    "\n",
+    "# Initialize everything first\n",
+    "pack_cuda._ensure_initialized()\n",
     "\n",
     "# Parameters to tune\n",
-    "N = 200                       # number of trees (threads per block)\n",
-    "iters = 10                    # iterations per stream\n",
+    "N = 20\n",
+    "iters = 10\n",
     "xyt = make_input(N)\n",
     "\n",
-    "pack_cuda._ensure_initialized()\n",
-    "packs = [1,2, 4, 8, 16, 32, 64]  # number of concurrent streams to test\n",
-    "print(\"Streams\\tKernels/sec\\tElapsed(s)\")\n",
-    "for s in packs:\n",
-    "    kps, t = run_trial(s, iters, xyt[:200], xyt[:200])\n",
-    "    print(f\"{s}\\t{int(kps)}\\t\\t{t:.3f}\")"
+    "cp.cuda.Device().synchronize()\n",
+    "\n",
+    "packs = [1, 2, 4, 8, 16, 32, 64, 128, 256, 512]\n",
+    "print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
+    "for b in packs:\n",
+    "    cps, t = run_trial(b, iters, xyt, xyt)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")\n"
    ]
   },
   {
@@ -124,6 +131,155 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d87ca493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU: NVIDIA GeForce RTX 4070 Ti\n",
+      "Number of SMs: 60\n",
+      "Max threads per SM: 1536\n",
+      "Max threads per block: 1024\n",
+      "Max blocks per SM: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check GPU properties\n",
+    "props = cp.cuda.runtime.getDeviceProperties(0)\n",
+    "print(f\"GPU: {props['name'].decode()}\")\n",
+    "print(f\"Number of SMs: {props['multiProcessorCount']}\")\n",
+    "print(f\"Max threads per SM: {props['maxThreadsPerMultiProcessor']}\")\n",
+    "print(f\"Max threads per block: {props['maxThreadsPerBlock']}\")\n",
+    "print(f\"Max blocks per SM: {props['maxThreadsPerMultiProcessor'] // props['maxThreadsPerBlock']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7b7f0df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA version: 12080\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"CUDA version: {cp.cuda.runtime.runtimeGetVersion()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ae781f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac71fe29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test with smaller N to see if occupancy improves\n",
+    "N_small = 50\n",
+    "iters_small = 40\n",
+    "xyt_small = make_input(N_small)\n",
+    "\n",
+    "packs_test = [1, 2, 4, 8, 16, 32, 64, 128]\n",
+    "print(\"\\n=== Testing with N=50 (50 threads/block) ===\")\n",
+    "print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
+    "for b in packs_test:\n",
+    "    cps, t = run_trial(b, iters_small, xyt_small, xyt_small)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "215cb002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test: Compare multi_ensemble vs launching separate kernels\n",
+    "# To see if the issue is with the multi-ensemble kernel itself\n",
+    "\n",
+    "def run_separate_kernels(num_blocks, iters_per_call, xyt1_np, xyt2_np):\n",
+    "    \"\"\"Launch num_blocks separate single-block kernels instead of one multi-block kernel\"\"\"\n",
+    "    pack_cuda._ensure_initialized()\n",
+    "    \n",
+    "    xyt1_gpu = cp.asarray(xyt1_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
+    "    xyt2_gpu = cp.asarray(xyt2_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
+    "    \n",
+    "    # Warmup\n",
+    "    for _ in range(num_blocks):\n",
+    "        totals, grads = pack_cuda.overlap_list_total(xyt1_gpu, xyt2_gpu, compute_grad=True)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    \n",
+    "    # Timed run\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    start = time.perf_counter()\n",
+    "    for k in range(iters_per_call):\n",
+    "        for _ in range(num_blocks):\n",
+    "            totals, grads = pack_cuda.overlap_list_total(xyt1_gpu, xyt2_gpu, compute_grad=True)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    end = time.perf_counter()\n",
+    "    \n",
+    "    elapsed = end - start\n",
+    "    return iters_per_call / elapsed, elapsed\n",
+    "\n",
+    "print(\"\\n=== Comparing multi-ensemble vs separate kernel launches (N=20) ===\")\n",
+    "print(\"Blocks\\tMulti\\tSeparate\")\n",
+    "for b in [1, 2, 4, 8, 16, 32, 64]:\n",
+    "    cps_multi, _ = run_trial(b, iters, xyt, xyt)\n",
+    "    cps_sep, _ = run_separate_kernels(b, iters, xyt, xyt)\n",
+    "    print(f\"{b}\\t{int(cps_multi)}\\t{int(cps_sep)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ef0cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check actual kernel occupancy\n",
+    "# Try to determine how many blocks can run per SM\n",
+    "\n",
+    "# Get the kernel function\n",
+    "pack_cuda._ensure_initialized()\n",
+    "kernel = pack_cuda._multi_ensemble_kernel\n",
+    "\n",
+    "# Check kernel attributes\n",
+    "print(\"Kernel attributes:\")\n",
+    "print(f\"  Max threads per block: {kernel.max_threads_per_block}\")\n",
+    "print(f\"  Num regs: {kernel.num_regs}\")\n",
+    "print(f\"  Shared size bytes: {kernel.shared_size_bytes}\")\n",
+    "print(f\"  Const size bytes: {kernel.const_size_bytes}\")\n",
+    "print(f\"  Local size bytes: {kernel.local_size_bytes}\")\n",
+    "\n",
+    "# Calculate theoretical occupancy\n",
+    "threads_per_block = 20  # Our N\n",
+    "max_threads_per_sm = props['maxThreadsPerMultiProcessor']\n",
+    "max_blocks_per_sm_thread = max_threads_per_sm // threads_per_block\n",
+    "\n",
+    "print(f\"\\nWith {threads_per_block} threads/block:\")\n",
+    "print(f\"  Max blocks/SM (thread limit): {max_blocks_per_sm_thread}\")\n",
+    "print(f\"  Max active threads/SM: {min(max_threads_per_sm, max_blocks_per_sm_thread * threads_per_block)}\")"
+   ]
   }
  ],
  "metadata": {
