--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -31,22 +31,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
       "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t312\t\t0.032\n",
-      "2\t351\t\t0.028\n",
-      "4\t251\t\t0.040\n",
-      "8\t294\t\t0.034\n",
-      "16\t277\t\t0.036\n",
-      "32\t235\t\t0.043\n",
-      "64\t383\t\t0.026\n",
-      "128\t202\t\t0.049\n",
-      "32\t235\t\t0.043\n",
-      "64\t383\t\t0.026\n",
-      "128\t202\t\t0.049\n",
-      "256\t70\t\t0.142\n",
-      "256\t70\t\t0.142\n",
-      "512\t28\t\t0.352\n",
-      "512\t28\t\t0.352\n"
+      "1\t184\t\t0.054\n",
+      "2\t186\t\t0.054\n",
+      "4\t184\t\t0.054\n",
+      "8\t179\t\t0.056\n",
+      "16\t194\t\t0.051\n",
+      "32\t185\t\t0.054\n",
+      "64\t116\t\t0.086\n",
+      "128\t51\t\t0.193\n",
+      "256\t19\t\t0.513\n",
+      "512\t10\t\t0.967\n"
      ]
     }
    ],
@@ -110,7 +106,7 @@
     "pack_cuda._ensure_initialized()\n",
     "\n",
     "# Parameters to tune\n",
-    "N = 20\n",
+    "N = 200\n",
     "iters = 10\n",
     "xyt = make_input(N)\n",
     "\n",
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ac71fe29",
    "metadata": {},
    "outputs": [
@@ -199,22 +195,14 @@
       "\n",
       "=== Testing with N=50 (50 threads/block) ===\n",
       "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t128\t\t0.311\n",
-      "2\t788\t\t0.051\n",
-      "4\t770\t\t0.052\n",
-      "8\t759\t\t0.053\n",
-      "1\t128\t\t0.311\n",
-      "2\t788\t\t0.051\n",
-      "4\t770\t\t0.052\n",
-      "8\t759\t\t0.053\n",
-      "16\t730\t\t0.055\n",
-      "32\t605\t\t0.066\n",
-      "64\t375\t\t0.106\n",
-      "16\t730\t\t0.055\n",
-      "32\t605\t\t0.066\n",
-      "64\t375\t\t0.106\n",
-      "128\t181\t\t0.221\n",
-      "128\t181\t\t0.221\n"
+      "1\t850\t\t0.047\n",
+      "2\t860\t\t0.046\n",
+      "4\t844\t\t0.047\n",
+      "8\t810\t\t0.049\n",
+      "16\t721\t\t0.055\n",
+      "32\t575\t\t0.069\n",
+      "64\t369\t\t0.108\n",
+      "128\t143\t\t0.279\n"
      ]
     }
    ],
@@ -235,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "215cb002",
    "metadata": {},
    "outputs": [
@@ -246,14 +234,13 @@
       "\n",
       "=== Comparing multi-ensemble vs separate kernel launches (N=20) ===\n",
       "Blocks\tMulti\tSeparate\n",
-      "1\t2064\t5483\n",
-      "2\t2973\t3530\n",
-      "4\t1577\t1681\n",
-      "8\t933\t893\n",
-      "16\t1304\t444\n",
-      "32\t436\t220\n",
-      "64\t356\t110\n",
-      "64\t356\t110\n"
+      "1\t202\t208\n",
+      "2\t202\t104\n",
+      "4\t205\t52\n",
+      "8\t199\t26\n",
+      "16\t194\t13\n",
+      "32\t176\t6\n",
+      "64\t118\t3\n"
      ]
     }
    ],
@@ -295,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b6ef0cb5",
    "metadata": {},
    "outputs": [
@@ -345,139 +332,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25992d74",
+   "id": "6b73c8e5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9cf33c40",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Register analysis:\n",
-      "  Registers per SM: 65536\n",
-      "  Registers per thread: 72\n",
-      "  Registers per block (N=20): 1440\n",
-      "  Max blocks/SM (register limit): 45\n",
-      "  Max blocks/SM (thread limit): 76\n",
-      "  Actual max blocks/SM: 45\n",
-      "\n",
-      "With 60 SMs:\n",
-      "  Max concurrent blocks: 2700\n",
-      "  Max concurrent threads: 54000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate register-limited occupancy\n",
-    "# RTX 4070 Ti (Ada Lovelace): 65,536 registers per SM\n",
-    "\n",
-    "regs_per_sm = 65536\n",
-    "regs_per_thread = kernel.num_regs\n",
-    "threads_per_block = 20\n",
-    "\n",
-    "# How many blocks can fit based on registers?\n",
-    "regs_per_block = regs_per_thread * threads_per_block\n",
-    "max_blocks_per_sm_regs = regs_per_sm // regs_per_block\n",
-    "\n",
-    "print(f\"Register analysis:\")\n",
-    "print(f\"  Registers per SM: {regs_per_sm}\")\n",
-    "print(f\"  Registers per thread: {regs_per_thread}\")\n",
-    "print(f\"  Registers per block (N={threads_per_block}): {regs_per_block}\")\n",
-    "print(f\"  Max blocks/SM (register limit): {max_blocks_per_sm_regs}\")\n",
-    "print(f\"  Max blocks/SM (thread limit): {max_blocks_per_sm_thread}\")\n",
-    "print(f\"  Actual max blocks/SM: {min(max_blocks_per_sm_regs, max_blocks_per_sm_thread)}\")\n",
-    "print(f\"\\nWith 60 SMs:\")\n",
-    "print(f\"  Max concurrent blocks: {60 * min(max_blocks_per_sm_regs, max_blocks_per_sm_thread)}\")\n",
-    "print(f\"  Max concurrent threads: {60 * min(max_blocks_per_sm_regs, max_blocks_per_sm_thread) * threads_per_block}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "58a422e0",
+   "id": "fa971ecc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8f03cc26",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== GPU kernel execution time (N=20) ===\n",
-      "Blocks\tGPU time(s)\tCalls/sec\n",
-      "1\t0.033\t\t303\n",
-      "2\t0.032\t\t310\n",
-      "4\t0.042\t\t239\n",
-      "8\t0.043\t\t234\n",
-      "16\t0.042\t\t237\n",
-      "32\t0.052\t\t191\n",
-      "64\t0.035\t\t288\n",
-      "128\t0.080\t\t125\n",
-      "256\t0.122\t\t81\n",
-      "512\t0.338\t\t29\n",
-      "1024\t0.559\t\t17\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check if this is actually compute-bound or something else\n",
-    "# Let's measure kernel execution time vs total time\n",
-    "\n",
-    "import cupy as cp\n",
-    "\n",
-    "def run_with_events(num_blocks, iters_per_call, xyt1_np, xyt2_np):\n",
-    "    \"\"\"Measure GPU execution time using CUDA events\"\"\"\n",
-    "    pack_cuda._ensure_initialized()\n",
-    "    \n",
-    "    xyt1_gpu = cp.asarray(xyt1_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
-    "    xyt2_gpu = cp.asarray(xyt2_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
-    "    \n",
-    "    xyt1_list = [xyt1_gpu for _ in range(num_blocks)]\n",
-    "    xyt2_list = [xyt2_gpu for _ in range(num_blocks)]\n",
-    "    \n",
-    "    # Warmup\n",
-    "    totals, grads = pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
-    "    cp.cuda.Device().synchronize()\n",
-    "    \n",
-    "    # Measure with events\n",
-    "    start_event = cp.cuda.Event()\n",
-    "    end_event = cp.cuda.Event()\n",
-    "    \n",
-    "    start_event.record()\n",
-    "    for k in range(iters_per_call):\n",
-    "        totals, grads = pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
-    "    end_event.record()\n",
-    "    end_event.synchronize()\n",
-    "    \n",
-    "    gpu_time_ms = cp.cuda.get_elapsed_time(start_event, end_event)\n",
-    "    return gpu_time_ms / 1000.0  # Convert to seconds\n",
-    "\n",
-    "print(\"\\n=== GPU kernel execution time (N=20) ===\")\n",
-    "print(\"Blocks\\tGPU time(s)\\tCalls/sec\")\n",
-    "for b in [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024]:\n",
-    "    gpu_time = run_with_events(b, iters, xyt, xyt)\n",
-    "    cps = iters / gpu_time\n",
-    "    print(f\"{b}\\t{gpu_time:.3f}\\t\\t{int(cps)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "6a21f5d6",
+   "id": "5399b67b",
    "metadata": {},
    "outputs": [],
    "source": []
