Refactor pack_cost

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -13,7 +13,11 @@
      "output_type": "stream",
      "text": [
       "local\n",
-      "hi\n",
+      "add bounds grad check\n",
+      "0.\n",
+      "0.\n",
+      "[1.4983714]\n",
+      "1.4983714092320781\n",
       "All tests passed.\n"
      ]
     },
@@ -33,10 +37,6 @@
     "sys.path.append('/mnt/d/packing/code/core/')\n",
     "import pack_test\n",
     "import importlib\n",
-    "\n",
-    "importlib.reload(pack_test)\n",
-    "importlib.reload(pack_test.pack_cost)\n",
-    "importlib.reload(pack_test.pack_cost.pack_cuda)\n",
     "pack_test.run_all_tests()"
    ]
   },
