--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -18,17 +18,51 @@
       "Testing CostDummy\n",
       "[0.]\n",
       "[0.]\n",
+      "back to 1e-4 later, also below\n",
       "[0.]\n",
       "[0.]\n",
+      "back to 1e-4 later, also below\n",
       "  Vectorized check for CostDummy\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
+      "Testing AreaCost\n",
+      "[0.25]\n",
+      "[0.25]\n",
+      "back to 1e-4 later, also below\n",
+      "[4.]\n",
+      "[4.]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for AreaCost\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryCost\n",
+      "[2.1628119945526123]\n",
+      "[2.1628126218552532]\n",
+      "back to 1e-4 later, also below\n",
+      "[0.1347944736480713]\n",
+      "[0.13479456425163105]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for BoundaryCost\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
       "Testing CollisionCostOverlappingArea\n",
-      "[2.2351825833320618]\n",
+      "[2.2351825]\n",
       "[2.2351832504299307]\n",
-      "[1.7478586435317993]\n",
+      "back to 1e-4 later, also below\n",
+      "[1.7478586]\n",
       "[1.747858502905263]\n",
+      "back to 1e-4 later, also below\n",
       "  Vectorized check for CollisionCostOverlappingArea\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[2.4128119945526123]\n",
+      "[2.4128126218552532]\n",
+      "back to 1e-4 later, also below\n",
+      "[4.134794473648071]\n",
+      "[4.1347945642516315]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CostCompound\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "All tests passed.\n"
      ]
